# classif-inference

./: .gitignore  CMakeLists.txt
src/: example-app.cpp
src/model_loaders/: definitionstrt.h  model_loader.cpp  model_loader.h  model_loader_openvino.cpp  model_loader_openvino.h  model_loader_tensorrt.cpp  model_loader_tensorrt.h  model_loader_torch_script.cpp  model_loader_torch_script.h
